Compiladores/bc_inicial/y.output
   0  $accept : input $end

   1  input :
   2        | input line
   3        | error NL

   4  line : NL
   5       | exp NL
   6       | cmd NL

   7  params : lident
   8         |

   9  lident : IDENT
  10         | lident ',' IDENT

  11  cmd : exp ';'
  12      | RETURN exp ';'

  13  $$1 :

  14  cmd : DEFINE IDENT $$1 '(' params ')' '{' lcmd '}'
  15      | FOR '(' exp ';' exp ';' exp ')' cmd
  16      | IF '(' exp ')' cmd
  17      | IF '(' exp ')' cmd ELSE cmd
  18      | WHILE '(' exp ')' cmd
  19      | PRINT '(' exp ')' ';'
  20      | '{' lcmd '}'
  21      | HELP
  22      | SHOW IDENT
  23      | SHOW_ALL

  24  lcmd : lcmd cmd
  25       |

  26  exp : NUM
  27      | IDENT
  28      | IDENT '=' exp
  29      | IDENT SOMA_ATR exp
  30      | IDENT MULT_ATR exp
  31      | exp '+' exp
  32      | exp '-' exp
  33      | exp '*' exp
  34      | exp '/' exp
  35      | exp '<' exp
  36      | '-' exp
  37      | exp '^' exp
  38      | '(' exp ')'
  39      | exp '>' exp
  40      | exp MAIOR_IGUAL exp
  41      | exp MENOR_IGUAL exp
  42      | exp DIFF exp
  43      | exp IGUAL exp
  44      | exp AND exp
  45      | exp OR exp
  46      | '!' exp

  47  $$2 :

  48  exp : IDENT $$2 '(' valParams ')'

  49  valParams : lparam
  50            |

  51  lparam : exp
  52         | lparam ',' exp

state 0
	$accept : . input $end  (0)
	input : .  (1)

	error  shift 1
	$end  reduce 1
	NL  reduce 1
	NUM  reduce 1
	IF  reduce 1
	WHILE  reduce 1
	PRINT  reduce 1
	FOR  reduce 1
	DEFINE  reduce 1
	RETURN  reduce 1
	HELP  reduce 1
	SHOW  reduce 1
	SHOW_ALL  reduce 1
	IDENT  reduce 1
	'!'  reduce 1
	'-'  reduce 1
	'('  reduce 1
	'{'  reduce 1

	input  goto 2


state 1
	input : error . NL  (3)

	NL  shift 3
	.  error


state 2
	$accept : input . $end  (0)
	input : input . line  (2)

	$end  accept
	NL  shift 4
	NUM  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	FOR  shift 9
	DEFINE  shift 10
	RETURN  shift 11
	HELP  shift 12
	SHOW  shift 13
	SHOW_ALL  shift 14
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	'{'  shift 19
	.  error

	exp  goto 20
	cmd  goto 21
	line  goto 22


state 3
	input : error NL .  (3)

	.  reduce 3


state 4
	line : NL .  (4)

	.  reduce 4


state 5
	exp : NUM .  (26)

	.  reduce 26


state 6
	cmd : IF . '(' exp ')' cmd  (16)
	cmd : IF . '(' exp ')' cmd ELSE cmd  (17)

	'('  shift 23
	.  error


state 7
	cmd : WHILE . '(' exp ')' cmd  (18)

	'('  shift 24
	.  error


state 8
	cmd : PRINT . '(' exp ')' ';'  (19)

	'('  shift 25
	.  error


state 9
	cmd : FOR . '(' exp ';' exp ';' exp ')' cmd  (15)

	'('  shift 26
	.  error


state 10
	cmd : DEFINE . IDENT $$1 '(' params ')' '{' lcmd '}'  (14)

	IDENT  shift 27
	.  error


state 11
	cmd : RETURN . exp ';'  (12)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 28


state 12
	cmd : HELP .  (21)

	.  reduce 21


state 13
	cmd : SHOW . IDENT  (22)

	IDENT  shift 29
	.  error


state 14
	cmd : SHOW_ALL .  (23)

	.  reduce 23


state 15
	exp : IDENT .  (27)
	exp : IDENT . '=' exp  (28)
	exp : IDENT . SOMA_ATR exp  (29)
	exp : IDENT . MULT_ATR exp  (30)
	exp : IDENT . $$2 '(' valParams ')'  (48)
	$$2 : .  (47)

	SOMA_ATR  shift 30
	MULT_ATR  shift 31
	'='  shift 32
	NL  reduce 27
	AND  reduce 27
	OR  reduce 27
	MAIOR_IGUAL  reduce 27
	MENOR_IGUAL  reduce 27
	DIFF  reduce 27
	IGUAL  reduce 27
	'<'  reduce 27
	'>'  reduce 27
	'-'  reduce 27
	'+'  reduce 27
	'*'  reduce 27
	'/'  reduce 27
	'^'  reduce 27
	','  reduce 27
	';'  reduce 27
	'('  reduce 47
	')'  reduce 27

	$$2  goto 33


state 16
	exp : '!' . exp  (46)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 34


state 17
	exp : '-' . exp  (36)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 35


state 18
	exp : '(' . exp ')'  (38)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 36


state 19
	cmd : '{' . lcmd '}'  (20)
	lcmd : .  (25)

	.  reduce 25

	lcmd  goto 37


state 20
	line : exp . NL  (5)
	cmd : exp . ';'  (11)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	NL  shift 38
	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	';'  shift 52
	.  error


state 21
	line : cmd . NL  (6)

	NL  shift 53
	.  error


state 22
	input : input line .  (2)

	.  reduce 2


state 23
	cmd : IF '(' . exp ')' cmd  (16)
	cmd : IF '(' . exp ')' cmd ELSE cmd  (17)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 54


state 24
	cmd : WHILE '(' . exp ')' cmd  (18)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 55


state 25
	cmd : PRINT '(' . exp ')' ';'  (19)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 56


state 26
	cmd : FOR '(' . exp ';' exp ';' exp ')' cmd  (15)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 57


state 27
	cmd : DEFINE IDENT . $$1 '(' params ')' '{' lcmd '}'  (14)
	$$1 : .  (13)

	.  reduce 13

	$$1  goto 58


state 28
	cmd : RETURN exp . ';'  (12)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	';'  shift 59
	.  error


state 29
	cmd : SHOW IDENT .  (22)

	.  reduce 22


state 30
	exp : IDENT SOMA_ATR . exp  (29)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 60


state 31
	exp : IDENT MULT_ATR . exp  (30)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 61


state 32
	exp : IDENT '=' . exp  (28)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 62


state 33
	exp : IDENT $$2 . '(' valParams ')'  (48)

	'('  shift 63
	.  error


state 34
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)
	exp : '!' exp .  (46)

	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	NL  reduce 46
	AND  reduce 46
	OR  reduce 46
	MAIOR_IGUAL  reduce 46
	MENOR_IGUAL  reduce 46
	DIFF  reduce 46
	IGUAL  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	','  reduce 46
	';'  reduce 46
	')'  reduce 46


state 35
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : '-' exp .  (36)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	'^'  shift 51
	NL  reduce 36
	AND  reduce 36
	OR  reduce 36
	MAIOR_IGUAL  reduce 36
	MENOR_IGUAL  reduce 36
	DIFF  reduce 36
	IGUAL  reduce 36
	'<'  reduce 36
	'>'  reduce 36
	'-'  reduce 36
	'+'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	','  reduce 36
	';'  reduce 36
	')'  reduce 36


state 36
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : '(' exp . ')'  (38)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	')'  shift 64
	.  error


state 37
	cmd : '{' lcmd . '}'  (20)
	lcmd : lcmd . cmd  (24)

	NUM  shift 5
	IF  shift 6
	WHILE  shift 7
	PRINT  shift 8
	FOR  shift 9
	DEFINE  shift 10
	RETURN  shift 11
	HELP  shift 12
	SHOW  shift 13
	SHOW_ALL  shift 14
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	'{'  shift 19
	'}'  shift 65
	.  error

	exp  goto 66
	cmd  goto 67


state 38
	line : exp NL .  (5)

	.  reduce 5


state 39
	exp : exp AND . exp  (44)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 68


state 40
	exp : exp OR . exp  (45)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 69


state 41
	exp : exp MAIOR_IGUAL . exp  (40)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 70


state 42
	exp : exp MENOR_IGUAL . exp  (41)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 71


state 43
	exp : exp DIFF . exp  (42)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 72


state 44
	exp : exp IGUAL . exp  (43)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 73


state 45
	exp : exp '<' . exp  (35)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 74


state 46
	exp : exp '>' . exp  (39)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 75


state 47
	exp : exp '-' . exp  (32)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 76


state 48
	exp : exp '+' . exp  (31)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 77


state 49
	exp : exp '*' . exp  (33)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 78


state 50
	exp : exp '/' . exp  (34)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 79


state 51
	exp : exp '^' . exp  (37)

	NUM  shift 5
	IDENT  shift 15
	'!'  shift 16
	'-'  shift 17
	'('  shift 18
	.  error

	exp  goto 80


state 52
	cmd : exp ';' .  (11)

	.  reduce 11


state 53
	line : cmd NL .  (6)

	.  reduce 6


state 54
	cmd : IF '(' exp . ')' cmd  (16)
	cmd : IF '(' exp . ')' cmd ELSE cmd  (17)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	')'  shift 81
	.  error


state 55
	cmd : WHILE '(' exp . ')' cmd  (18)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	')'  shift 82
	.  error


state 56
	cmd : PRINT '(' exp . ')' ';'  (19)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	')'  shift 83
	.  error


state 57
	cmd : FOR '(' exp . ';' exp ';' exp ')' cmd  (15)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	';'  shift 84
	.  error


state 58
	cmd : DEFINE IDENT $$1 . '(' params ')' '{' lcmd '}'  (14)

	'('  shift 85
	.  error


state 59
	cmd : RETURN exp ';' .  (12)

	.  reduce 12


60: shift/reduce conflict (shift 39, reduce 29) on AND
60: shift/reduce conflict (shift 40, reduce 29) on OR
60: shift/reduce conflict (shift 41, reduce 29) on MAIOR_IGUAL
60: shift/reduce conflict (shift 42, reduce 29) on MENOR_IGUAL
60: shift/reduce conflict (shift 43, reduce 29) on DIFF
60: shift/reduce conflict (shift 44, reduce 29) on IGUAL
60: shift/reduce conflict (shift 45, reduce 29) on '<'
60: shift/reduce conflict (shift 46, reduce 29) on '>'
60: shift/reduce conflict (shift 47, reduce 29) on '-'
60: shift/reduce conflict (shift 48, reduce 29) on '+'
60: shift/reduce conflict (shift 49, reduce 29) on '*'
60: shift/reduce conflict (shift 50, reduce 29) on '/'
60: shift/reduce conflict (shift 51, reduce 29) on '^'
state 60
	exp : IDENT SOMA_ATR exp .  (29)
	exp : exp . '+' exp  (31)
	exp : exp . '-' exp  (32)
	exp : exp . '*' exp  (33)
	exp : exp . '/' exp  (34)
	exp : exp . '<' exp  (35)
	exp : exp . '^' exp  (37)
	exp : exp . '>' exp  (39)
	exp : exp . MAIOR_IGUAL exp  (40)
	exp : exp . MENOR_IGUAL exp  (41)
	exp : exp . DIFF exp  (42)
	exp : exp . IGUAL exp  (43)
	exp : exp . AND exp  (44)
	exp : exp . OR exp  (45)

	AND  shift 39
	OR  shift 40
	MAIOR_IGUAL  shift 41
	MENOR_IGUAL  shift 42
	DIFF  shift 43
	IGUAL  shift 44
	'<'  shift 45
	'>'  shift 46
	'-'  shift 47
	'+'  shift 48
	'*'  shift 49
	'/'  shift 50
	'^'  shift 51
	NL  reduce 29
	','  reduce 29
	';'  reduce 29
	')'  reduce 29

